--- a/src/DotnetCoreApp/package.json
+++ b/src/DotnetCoreApp/package.json
@@ -1,9 +1,16 @@
 {
-	"version": "1.0.0",
-	"name": "asp.net",
-	"private": true,
+  "version": "1.0.0",
+  "name": "asp.net",
+  "private": true,
   "devDependencies": {
-    "gulp": "3.9.1"
-      "del": "2.2.2"
-  }
+    "del": "2.2.2",
+    "gulp": "3.9.1",
+    "systemjs": "0.19.24",
+    "angular2": "2.0.0-beta.17",
+    "rxjs": "5.0.0-beta.6",
+    "es6-shim":"^0.35.1",
+    "zone.js": "^0.6.17",
+    "reflect-metadata": "0.1.2"
+  },
+  "dependencies": {}
 }
